@@ -13,8 +13,10 @@ import de.adorsys.ledgers.rest.client.PaymentRestClient;
 import de.adorsys.psd2.xs2a.core.pis.TransactionStatus;
 import de.adorsys.psd2.xs2a.spi.domain.SpiAspspConsentDataProvider;
 import de.adorsys.psd2.xs2a.spi.domain.payment.SpiSinglePayment;
+import de.adorsys.psd2.xs2a.spi.domain.payment.response.SpiGetPaymentStatusResponse;
 import de.adorsys.psd2.xs2a.spi.domain.response.SpiResponse;
 import de.adorsys.psd2.xs2a.spi.service.SpiPayment;
+import org.jetbrains.annotations.NotNull;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
@@ -22,13 +24,16 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import org.springframework.http.ResponseEntity;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.*;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
 @RunWith(MockitoJUnitRunner.class)
 public class GeneralPaymentServiceTest {
+    private static final String ANY_MEDIA_TYPE = "*/*";
+    private static final String JSON_MEDIA_TYPE = "application/json";
+    private static final String XML_MEDIA_TYPE = "application/xml";
+
     @InjectMocks
     private GeneralPaymentService generalPaymentService;
     @Mock
@@ -43,6 +48,39 @@ public class GeneralPaymentServiceTest {
     private ObjectMapper objectMapper;
     @Mock
     private LedgersSpiPaymentMapper paymentMapper;
+
+    @Test
+    public void getPaymentStatusById_withXmlMediaType_shouldReturnMockResponse() {
+        // Given
+        byte[] aspspConsentData = "".getBytes();
+        byte[] xmlBody = buildXmlBody().getBytes();
+        SpiGetPaymentStatusResponse expectedResponse = new SpiGetPaymentStatusResponse(TransactionStatus.ACSP, null, XML_MEDIA_TYPE, xmlBody);
+
+        // When
+        SpiResponse<SpiGetPaymentStatusResponse> spiResponse = generalPaymentService.getPaymentStatusById(PaymentTypeTO.SINGLE, XML_MEDIA_TYPE, "payment id", TransactionStatus.ACSP, aspspConsentData);
+
+        // Then
+        assertFalse(spiResponse.hasError());
+
+        SpiGetPaymentStatusResponse payload = spiResponse.getPayload();
+        assertEquals(expectedResponse, payload);
+    }
+
+    @Test
+    public void getPaymentStatusById_withNotAcspStatus_shouldReturnSameStatus() {
+        // Given
+        byte[] aspspConsentData = "".getBytes();
+        SpiGetPaymentStatusResponse expectedResponse = new SpiGetPaymentStatusResponse(TransactionStatus.ACSC, null, JSON_MEDIA_TYPE, null);
+
+        // When
+        SpiResponse<SpiGetPaymentStatusResponse> spiResponse = generalPaymentService.getPaymentStatusById(PaymentTypeTO.SINGLE, ANY_MEDIA_TYPE, "payment id", TransactionStatus.ACSC, aspspConsentData);
+
+        // Then
+        assertFalse(spiResponse.hasError());
+
+        SpiGetPaymentStatusResponse payload = spiResponse.getPayload();
+        assertEquals(expectedResponse, payload);
+    }
 
     @Test
     public void getPaymentByIdTransactionStatusRCVD() {
@@ -95,5 +133,33 @@ public class GeneralPaymentServiceTest {
         spiPayment.setCreditorAgent(agent);
         spiPayment.setPaymentStatus(transactionStatus);
         return spiPayment;
+    }
+
+    @NotNull
+    private String buildXmlBody() {
+        return "<Document xmlns=\"urn:iso:std:iso:20022:tech:xsd:pain.002.001.03\"> \n" +
+                       "  <CstmrPmtStsRpt>\n" +
+                       "    <GrpHdr>\n" +
+                       "      <MsgId>4572457256725689726906</MsgId> \n" +
+                       "      <CreDtTm>2017-02-14T20:24:56.021Z</CreDtTm> \n" +
+                       "      <DbtrAgt><FinInstnId><BIC>ABCDDEFF</BIC></FinInstnId></DbtrAgt> \n" +
+                       "      <CdtrAgt><FinInstnId><BIC>DCBADEFF</BIC></FinInstnId></CdtrAgt> \n" +
+                       "    </GrpHdr>\n" +
+                       "    <OrgnlGrpInfAndSts> \n" +
+                       "      <OrgnlMsgId>MIPI-123456789RI-123456789</OrgnlMsgId> \n" +
+                       "      <OrgnlMsgNmId>pain.001.001.03</OrgnlMsgNmId> \n" +
+                       "      <OrgnlCreDtTm>2017-02-14T20:23:34.000Z</OrgnlCreDtTm> \n" +
+                       "      <OrgnlNbOfTxs>1</OrgnlNbOfTxs> \n" +
+                       "      <OrgnlCtrlSum>123</OrgnlCtrlSum> \n" +
+                       "      <GrpSts>ACCT</GrpSts>\n" +
+                       "    </OrgnlGrpInfAndSts>\n" +
+                       "    <OrgnlPmtInfAndSts> \n" +
+                       "      <OrgnlPmtInfId>BIPI-123456789RI-123456789</OrgnlPmtInfId> \n" +
+                       "      <OrgnlNbOfTxs>1</OrgnlNbOfTxs> \n" +
+                       "      <OrgnlCtrlSum>123</OrgnlCtrlSum> \n" +
+                       "      <PmtInfSts>ACCT</PmtInfSts>\n" +
+                       "    </OrgnlPmtInfAndSts>\n" +
+                       "  </CstmrPmtStsRpt>\n" +
+                       "</Document>";
     }
 }
